--- a/Bantoo!/css/footer.css
+++ b/Bantoo!/css/footer.css
@@ -1,10 +1,20 @@
-/* Gaya Footer */
 footer {
     background-color: #333;
     color: white;
     text-align: center;
     padding: 1rem;
-    position: fixed;
-    bottom: 0;
+    position: relative; 
     width: 100%;
+    margin-top: 2rem; 
+}
+
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1; 
 }
